# MTG-DB

./: .env.example  .gitignore  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 20260607_cardmarket_tables.py  20260609_card_translations.py  20260609_drop_unused_tables.py  20260609_refactor_translations.py  20260609_rename_scryfall_tables.py  20260620_add_deck_stats_tables.py  20260620_add_scryfall_card_tags.py  README
docs/: Launch.txt  schema_base_de_donnees.txt
scripts/: import_cardmarket_all.py  import_cardmarket_price_guide.py  import_cardmarket_products.py  import_game_changers.py  import_scryfall.py  import_tagger_tags.py  link_cardmarket_to_scryfall.py
src/mtgdb/cardmarket/: __init__.py  download.py  import_price_guide.py  import_product_catalog.py  link_scryfall.py  parsers.py
src/mtgdb/db/: engine.py
src/mtgdb/db/models/: __init__.py  card.py  card_face.py  card_price.py  card_printing.py  card_tag.py  cardmarket_import_file.py  cardmarket_price_guide_entry.py  cardmarket_product.py  cardmarket_product_localization.py  deck_stats.py  import_run.py  mtg_set.py
